--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="photo d'une assiette du restaurant la palette du gout">
                         <div class="info_photo">
-                            <p class="title_menu"><strong>La palette du goût <i class="fa-thin fa-heart"></i></strong>
-                            </p>
+                            <p class="title_menu"><strong>La palette du goût </strong></p>
                             <p class="city">Ménilmontant</p>
+                            <i class="fas fa-heart"></i>
                         </div>
 
                     </article>
@@ -57,9 +57,9 @@
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt="photo d'une assiette du restaurant la note enchantée">
                         <div class="info_photo">
-                            <p class="title_menu"><strong>La note enchantée <i class="fas fa-heart"></i></strong>
-                            </p>
+                            <p class="title_menu"><strong>La note enchantée</strong></p>
                             <p class="city">Charonne</p>
+                            <i class="fas fa-heart"></i>
                         </div>
                     </article>
                 </a>
@@ -68,8 +68,9 @@
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="photo d'une assiette du restaurant à la française">
                         <div class="info_photo">
-                            <p class="title_menu"><strong>A la française <i class="fa-thin fa-heart"></i></strong></p>
+                            <p class="title_menu"><strong>A la française </strong></p>
                             <p class="city">Cité Rouge</p>
+                            <i class="fas fa-heart"></i>
                         </div>
                     </article>
                 </a>
@@ -78,9 +79,9 @@
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="photo d'une assiette du restaurant le délice des sens">
                         <div class="info_photo">
-                            <p class="title_menu"><strong>Le délice des sens <i class="fa-thin fa-heart"></i></strong>
-                            </p>
+                            <p class="title_menu"><strong>Le délice des sens </strong></p>
                             <p class="city">Folie-Méricourt</p>
+                            <i class="fas fa-heart"></i>
                         </div>
                     </article>
                 </a>
@@ -90,9 +91,9 @@
         <footer>
             <h4>ohmyfood</h4>
             <div class="footer_list">
-                <p><i class="fa-solid fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un restaurant</a>
+                <p><i class="fas fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un restaurant</a>
                 </p>
-                <p><i class="fa-solid fa-handshake-angle"></i><a class="a__element--modif2" href="#">Devenir
+                <p><i class="fas fa-handshake"></i><a class="a__element--modif2" href="#">Devenir
                         partenaire</a></p>
                 <a class="a__element" href="#">Mention légales</a>
                 <a class="a__element" href="#">Contact</a>
