--- a/index.html
+++ b/index.html
@@ -40,48 +40,52 @@
         <main>
             <section class="restaurant_accueil">
                 <h3>Restaurants</h3>
-                <a href="#" class="vignette">
+                <a href="menilmontant.html" class="vignette">
                     <article>
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                        <a href="#" class="new">Nouveau</a>
+                        <img  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="photo d'une assiette du restaurant la palette du gout">
                         <div class="info_photo">
                             <p class="title_menu"><strong>La palette du goût </strong></p>
                             <p class="city">Ménilmontant</p>
-                            <i class="fas fa-heart"></i>
+                            <i class="far fa-heart"></i>
                         </div>
 
                     </article>
                 </a>
                 <a href="#" class="vignette">
                     <article>
+                        <a href="#" class="new">Nouveau</a>
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt="photo d'une assiette du restaurant la note enchantée">
                         <div class="info_photo">
                             <p class="title_menu"><strong>La note enchantée</strong></p>
                             <p class="city">Charonne</p>
-                            <i class="fas fa-heart"></i>
+                            <i class="far fa-heart"></i>
                         </div>
                     </article>
                 </a>
                 <a href="#" class="vignette">
                     <article>
+                        <a href="#" class="new">Nouveau</a>
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="photo d'une assiette du restaurant à la française">
                         <div class="info_photo">
                             <p class="title_menu"><strong>A la française </strong></p>
                             <p class="city">Cité Rouge</p>
-                            <i class="fas fa-heart"></i>
+                            <i class="far fa-heart"></i>
                         </div>
                     </article>
                 </a>
                 <a href="#" class="vignette">
                     <article>
+                        <a href="#" class="new">Nouveau</a>
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt="photo d'une assiette du restaurant le délice des sens">
                         <div class="info_photo">
                             <p class="title_menu"><strong>Le délice des sens </strong></p>
                             <p class="city">Folie-Méricourt</p>
-                            <i class="fas fa-heart"></i>
+                            <i class="far fa-heart"></i>
                         </div>
                     </article>
                 </a>
