--- a/index.html
+++ b/index.html
@@ -31,64 +31,70 @@
         <nav class="nav_restaurant_accueil">
 
             <ol>
-                <li><i class="fas fa-mobile alt"></i> Choisissez un restaurant</li>
-                <li><i class="fas fa-list-ul alt"></i> Choisissez un restaurant</li>
-                <li><i class="fas fa-store alt"></i> Choisissez un restaurant</li>
+                <li class="choix"><i class="fas fa-mobile alt"></i> Choisissez un restaurant</li>
+                <li class="composez"><i class="fas fa-list-ul alt"></i> Composez votre menu</li>
+                <li class="deguster"><i class="fas fa-store violet"></i> Déguster au restaurant</li>
             </ol>
         </nav>
 
         <main>
             <section class="restaurant_accueil">
                 <h3>Restaurants</h3>
-                <a href="menilmontant.html" class="vignette">
-                    <article>
-                        <a href="#" class="new">Nouveau</a>
-                        <img  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt="photo d'une assiette du restaurant la palette du gout">
-                        <div class="info_photo">
-                            <p class="title_menu"><strong>La palette du goût </strong></p>
-                            <p class="city">Ménilmontant</p>
-                            <i class="far fa-heart"></i>
-                        </div>
+                <div class="bloc_main">
+                    <a href="menilmontant.html" class="vignette">
+                        <article>
+                            <a href="#" class="new">Nouveau</a>
+                            <img  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                alt="photo d'une assiette du restaurant la palette du gout">
+                            <div class="vignette_info_photo">
+                                <p class="title_menu"><strong>La palette du goût </strong></p>
+                                <p class="city">Ménilmontant</p>
+                                <i class="far fa-heart heart"></i>
+                                <i class="fas fa-heart heartfull"></i>
+                            </div>
 
-                    </article>
-                </a>
-                <a href="#" class="vignette">
-                    <article>
-                        <a href="#" class="new">Nouveau</a>
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                            alt="photo d'une assiette du restaurant la note enchantée">
-                        <div class="info_photo">
-                            <p class="title_menu"><strong>La note enchantée</strong></p>
-                            <p class="city">Charonne</p>
-                            <i class="far fa-heart"></i>
-                        </div>
-                    </article>
-                </a>
-                <a href="#" class="vignette">
-                    <article>
-                        <a href="#" class="new">Nouveau</a>
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                            alt="photo d'une assiette du restaurant à la française">
-                        <div class="info_photo">
-                            <p class="title_menu"><strong>A la française </strong></p>
-                            <p class="city">Cité Rouge</p>
-                            <i class="far fa-heart"></i>
-                        </div>
-                    </article>
-                </a>
-                <a href="#" class="vignette">
-                    <article>
-                        <a href="#" class="new">Nouveau</a>
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt="photo d'une assiette du restaurant le délice des sens">
-                        <div class="info_photo">
-                            <p class="title_menu"><strong>Le délice des sens </strong></p>
-                            <p class="city">Folie-Méricourt</p>
-                            <i class="far fa-heart"></i>
-                        </div>
-                    </article>
-                </a>
+                        </article>
+                    </a>
+                    <a href="#" class="vignette">
+                        <article>
+                            <a href="#" class="new">Nouveau</a>
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                alt="photo d'une assiette du restaurant la note enchantée">
+                            <div class="vignette_info_photo">
+                                <p class="title_menu"><strong>La note enchantée</strong></p>
+                                <p class="city">Charonne</p>
+                                <i class="far fa-heart heart"></i>
+                                <i class="fas fa-heart heartfull"></i>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#" class="vignette">
+                        <article>
+                            <a href="#" class="new">Nouveau</a>
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                alt="photo d'une assiette du restaurant à la française">
+                            <div class="vignette_info_photo">
+                                <p class="title_menu"><strong>A la française </strong></p>
+                                <p class="city">Cité Rouge</p>
+                                <i class="far fa-heart heart"></i>
+                                <i class="fas fa-heart heartfull"></i>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#" class="vignette">
+                        <article>
+                            <a href="#" class="new">Nouveau</a>
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt="photo d'une assiette du restaurant le délice des sens">
+                            <div class="vignette_info_photo">
+                                <p class="title_menu"><strong>Le délice des sens </strong></p>
+                                <p class="city">Folie-Méricourt</p>
+                                <i class="far fa-heart heart"></i>
+                                <i class="fas fa-heart heartfull"></i>
+                            </div>
+                        </article>
+                    </a>
+                </div>
             </section>
         </main>
 
