corrrection article liens et rresponsive

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <div class="bloc_main">
                     <a href="menilmontant.html" class="vignette">
                         <article>
-                            <a href="#" class="new">Nouveau</a>
-                            <img  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            <span class="new">Nouveau</span>
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                                 alt="photo d'une assiette du restaurant la palette du gout">
                             <div class="vignette_info_photo">
                                 <p class="title_menu"><strong>La palette du goût </strong></p>
@@ -57,7 +57,7 @@
                     </a>
                     <a href="#" class="vignette">
                         <article>
-                            <a href="#" class="new">Nouveau</a>
+                            <span class="new">Nouveau</span>
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                                 alt="photo d'une assiette du restaurant la note enchantée">
                             <div class="vignette_info_photo">
@@ -70,7 +70,7 @@
                     </a>
                     <a href="#" class="vignette">
                         <article>
-                            <a href="#" class="new">Nouveau</a>
+                            <span class="new">Nouveau</span>
                             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                                 alt="photo d'une assiette du restaurant à la française">
                             <div class="vignette_info_photo">
@@ -83,7 +83,7 @@
                     </a>
                     <a href="#" class="vignette">
                         <article>
-                            <a href="#" class="new">Nouveau</a>
+                            <span class="new">Nouveau</span>
                             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                 alt="photo d'une assiette du restaurant le délice des sens">
                             <div class="vignette_info_photo">
