--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <section class="restaurant_accueil">
                 <h3>Restaurants</h3>
                 <div class="bloc_main">
-                    <a href="menilmontant.html" class="vignette">
+                    <a href="/la_palette_du_gout.html" class="vignette">
                         <article>
                             <span class="new">Nouveau</span>
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
@@ -106,7 +106,7 @@
                 <p><i class="fas fa-handshake"></i><a class="a__element--modif2" href="#">Devenir
                         partenaire</a></p>
                 <a class="a__element" href="#">Mention légales</a>
-                <a class="a__element" href="#">Contact</a>
+                <a class="a__element" href="mailto:someone@yoursite.com">Contact</a>
             </div>
 
         </footer>
