--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header_page_1">
         <div class="page_1_accueil">
-            <i class="fas fa-arrow-left"></i>
+            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
             <h1>Ohmyfood</h1>
         </div>
     </header>
@@ -43,7 +43,7 @@
                         <p class="price">35€</p>
                     </div>
                 </article>       
-                <article lass="menu_3__palette_du_gout">
+                <article class="menu_3__palette_du_gout">
                     <h4>Oeuf au plat</h4>
                     <div class="description_menu">
                         <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -67,7 +67,7 @@
                     <p class="price">35€</p>
                 </div>
             </article>       
-            <article lass="menu_3__palette_du_gout">
+            <article class="menu_3__palette_du_gout">
                 <h4>Filet de Turbot</h4>
                 <div class="description_menu">
                     <p>Aux agrumes</p>
@@ -91,7 +91,7 @@
                     <p class="price">22€</p>
                 </div>
             </article>       
-            <article lass="menu_3__palette_du_gout">
+            <article class="menu_3__palette_du_gout">
                 <h4>Mousse au chocolat</h4>
                 <div class="description_menu">
                     <p>Au piment d'espelette et à la truffe noire</p>
@@ -101,6 +101,7 @@
         </section>
         <div class="button--commande">
             <input class="commander" type="button" value="Commander">
+        </div>
         </div>
     </main>
     <footer>
