--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <section class="restaurant_accueil">
                 <h3>Restaurants</h3>
                 <div class="bloc_main">
-                    <a href="/la_palette_du_gout.html" class="vignette">
+                    <a href="la_palette_du_gout.html" class="vignette">
                         <article>
                             <span class="new">Nouveau</span>
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
