--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Ohmyfood</h1>
+        <h1>La palette du goît</h1>
     </header>
     <div class="bloc_page">
         <div class="geoloc_area">
@@ -41,7 +41,7 @@
             <section class="restaurant_accueil">
                 <h3>Restaurants</h3>
                 <div class="bloc_main">
-                    <a href="la_palette_du_gout.html" class="vignette">
+                    <a href="lapalettedugout.html" class="vignette">
                         <article>
                             <span class="new">Nouveau</span>
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
