pb lien corrigé

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>La palette du goît</h1>
+        <h1>Ohmyfood</h1>
     </header>
     <div class="bloc_page">
         <div class="geoloc_area">
