--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -13,8 +13,8 @@
 <body>
     <header class="header_page_1">
         <div class="page_1_accueil">
-            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-            <h1>Ohmyfood</h1>
+            <a href="index.html"><i class="fas fa-arrow-left back"></i></a>
+            <h1>La palette du goût</h1>
         </div>
     </header>
     <main class="main_page_1">
