pages_restau-ok

--- a/ledelicesdessens.html
+++ b/ledelicesdessens.html
@@ -19,34 +19,34 @@
     </header>
     <main class="main_page">
         <span>
-            <img class="illustration_page" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img class="illustration_page" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
             alt="photo d'une assiette du restaurant la palette du gout">
         </span>
         <div class="menu_page">
             <div class="ss_titre_page">
-                <h2 class="titre_la_palette_du_gout">La palette du gout</h2>
+                <h2 class="titre_la_palette_du_gout">Le délice des sens</h2>
                 <i class="far fa-heart heart_page"></i>
         </div>
         <section class="detail_menu--entrées">
             <h3>ENTREÉS</h3>
                 <article class="menu_1__palette_du_gout">
-                    <h4>Fricassée d'escargot</h4>
+                    <h4>Tartare de thon</h4>
                     <div class="description_menu">
-                        <p>Au piment d'espelette</p>
+                        <p>Assaisonné au yuzu</p>
                         <p class="price">25€</p>
                     </div>
                 </article>
                 <article class="menu_2__palette_du_gout">
-                    <h4>Foie gras de canard mi-cuit</h4>
+                    <h4>Bouchée de homard croustillant</h4>
                     <div class="description_menu">
-                        <p>Et ses copeaux de truffe noire</p>
+                        <p>Et ssa farandole de petits légumes</p>
                         <p class="price">35€</p>
                     </div>
                 </article>       
                 <article class="menu_3__palette_du_gout">
-                    <h4>Oeuf au plat</h4>
+                    <h4>Velouté de cèpes</h4>
                     <div class="description_menu">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p>Aux truffes</p>
                         <p class="price">20€</p>
                     </div>    
                 </article>
@@ -54,23 +54,23 @@
         <section class="detail_menu--plats">
             <h3>PLATS</h3>
             <article class="menu_1__palette_du_gout">
-                <h4>Filet de boeuf aux herbes</h4>
+                <h4>Poulet rôti aux herbes de Provence</h4>
                 <div class="description_menu">
-                    <p>Accompagné de sa ribambelle de légume</p>
+                    <p>Et sa crème de truffe</p>
                     <p class="price">40€</p>
                 </div>
             </article>
             <article class="menu_2__palette_du_gout">
-                <h4>Parmentier de queue de boeuf</h4>
+                <h4>Langouste rôtie</h4>
                 <div class="description_menu">
-                    <p>À la truffe noire sur sa purée de panais</p>
+                    <p>Et ses légumes de saison</p>
                     <p class="price">35€</p>
                 </div>
             </article>       
             <article class="menu_3__palette_du_gout">
-                <h4>Filet de Turbot</h4>
+                <h4>Côte de boeuf Angus</h4>
                 <div class="description_menu">
-                    <p>Aux agrumes</p>
+                    <p>Et sa purée de panais</p>
                     <p class="price">44€</p>
                 </div> 
             </article> 
@@ -78,23 +78,23 @@
         <section class="detail_menu--desserts">
             <h3>DESSERTS</h3>
             <article class="menu_1__palette_du_gout">
-                <h4>Paris-Brest</h4>
+                <h4>Farandole de desserts</h4>
                 <div class="description_menu">
-                    <p>Revisité</p>
+                    <p>Du chef</p>
                     <p class="price">18€</p>
                 </div>
             </article>
             <article class="menu_2__palette_du_gout">
-                <h4>Macaron au chocolat d'exception</h4>
+                <h4>Crème brulée</h4>
                 <div class="description_menu">
-                    <p>Et glace à la vanille de Madagascar</p>
+                    <p>Revisitée</p>
                     <p class="price">22€</p>
                 </div>
             </article>       
             <article class="menu_3__palette_du_gout">
-                <h4>Mousse au chocolat</h4>
+                <h4>Tiramisu</h4>
                 <div class="description_menu">
-                    <p>Au piment d'espelette et à la truffe noire</p>
+                    <p>À la noisette</p>
                     <p class="price">23€</p>
                 </div> 
             </article> 
