--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -19,7 +19,7 @@
     </header>
     <main class="main_page">
         <span>
-            <img class="illustration_page" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img class="illustration_page" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
             alt="photo d'une assiette du restaurant la palette du gout">
         </span>
         <div class="menu_page">
@@ -30,23 +30,23 @@
         <section class="detail_menu--entrées">
             <h3>ENTREÉS</h3>
                 <article class="menu_1__palette_du_gout">
-                    <h4>Fricassée d'escargot</h4>
+                    <h4>Tartare de poulpe</h4>
                     <div class="description_menu">
-                        <p>Au piment d'espelette</p>
+                        <p>Aux zestes d'orange</p>
                         <p class="price">25€</p>
                     </div>
                 </article>
                 <article class="menu_2__palette_du_gout">
-                    <h4>Foie gras de canard mi-cuit</h4>
+                    <h4>Velouté de légumes d'antan</h4>
                     <div class="description_menu">
-                        <p>Et ses copeaux de truffe noire</p>
+                        <p>Carotte, panais, topinambour</p>
                         <p class="price">35€</p>
                     </div>
                 </article>       
                 <article class="menu_3__palette_du_gout">
-                    <h4>Oeuf au plat</h4>
+                    <h4>Soupe à l'oignon</h4>
                     <div class="description_menu">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p>Revisitée</p>
                         <p class="price">20€</p>
                     </div>    
                 </article>
@@ -54,23 +54,23 @@
         <section class="detail_menu--plats">
             <h3>PLATS</h3>
             <article class="menu_1__palette_du_gout">
-                <h4>Filet de boeuf aux herbes</h4>
+                <h4>Coquilles Saint-Jacques</h4>
                 <div class="description_menu">
-                    <p>Accompagné de sa ribambelle de légume</p>
+                    <p>Accompagné d'une purée de panais</p>
                     <p class="price">40€</p>
                 </div>
             </article>
             <article class="menu_2__palette_du_gout">
-                <h4>Parmentier de queue de boeuf</h4>
+                <h4>Magret de canard</h4>
                 <div class="description_menu">
-                    <p>À la truffe noire sur sa purée de panais</p>
+                    <p>Et parmentier de pommes de terre</p>
                     <p class="price">35€</p>
                 </div>
             </article>       
             <article class="menu_3__palette_du_gout">
-                <h4>Filet de Turbot</h4>
+                <h4>Pigeonneau d'Ile-et-Vilaine</h4>
                 <div class="description_menu">
-                    <p>Aux agrumes</p>
+                    <p>Sur son lit de gnocchis aux légumes</p>
                     <p class="price">44€</p>
                 </div> 
             </article> 
@@ -78,23 +78,23 @@
         <section class="detail_menu--desserts">
             <h3>DESSERTS</h3>
             <article class="menu_1__palette_du_gout">
-                <h4>Paris-Brest</h4>
+                <h4>Pétales de violettes gl&cés</h4>
                 <div class="description_menu">
-                    <p>Revisité</p>
+                    <p>Et purée de noisettes</p>
                     <p class="price">18€</p>
                 </div>
             </article>
             <article class="menu_2__palette_du_gout">
-                <h4>Macaron au chocolat d'exception</h4>
+                <h4>Fondant au chocolat</h4>
                 <div class="description_menu">
-                    <p>Et glace à la vanille de Madagascar</p>
+                    <p>Revisité</p>
                     <p class="price">22€</p>
                 </div>
             </article>       
             <article class="menu_3__palette_du_gout">
-                <h4>Mousse au chocolat</h4>
+                <h4>Millefeuille croustillant</h4>
                 <div class="description_menu">
-                    <p>Au piment d'espelette et à la truffe noire</p>
+                    <p>Myrtilles de pâte d'amande</p>
                     <p class="price">23€</p>
                 </div> 
             </article> 
