--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                         </article>
                     </a>
-                    <a href="#" class="vignette">
+                    <a href="lanoteenchantée.html" class="vignette">
                         <article>
                             <span class="new">Nouveau</span>
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -68,7 +68,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="#" class="vignette">
+                    <a href="alafrançaise.html" class="vignette">
                         <article>
                             <span class="new">Nouveau</span>
                             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -81,7 +81,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="#" class="vignette">
+                    <a href="ledelicesdessens.html" class="vignette">
                         <article>
                             <span class="new">Nouveau</span>
                             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
