--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -70,7 +70,7 @@
             <article class="menu_3__palette_du_gout">
                 <h4>Mijoté de queue de boeuf</h4>
                 <div class="description_menu">
-                    <p>AEt riz sauvage aux zestes de citron</p>
+                    <p>Et riz sauvage aux zestes de citron</p>
                     <p class="price">44€</p>
                 </div> 
             </article> 
@@ -92,7 +92,7 @@
                 </div>
             </article>       
             <article class="menu_3__palette_du_gout">
-                <h4>Tarte au citron meringué</h4>
+                <h4>Tarte au citron meringuée</h4>
                 <div class="description_menu">
                     <p>Déstructurée</p>
                     <p class="price">23€</p>
