--- a/ledelicesdessens.html
+++ b/ledelicesdessens.html
@@ -39,7 +39,7 @@
                 <article class="menu_2__palette_du_gout">
                     <h4>Bouchée de homard croustillant</h4>
                     <div class="description_menu">
-                        <p>Et ssa farandole de petits légumes</p>
+                        <p>Et sa farandole de petits légumes</p>
                         <p class="price">35€</p>
                     </div>
                 </article>       
