--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -20,30 +20,30 @@
     <main class="main_page">
         <span>
             <img class="illustration_page" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-            alt="photo d'une assiette du restaurant la palette du gout">
+            alt="photo d'une assiette du restaurant à la française">
         </span>
         <div class="menu_page">
             <div class="ss_titre_page">
-                <h2 class="titre_la_palette_du_gout">La palette du gout</h2>
+                <h2 class="restaurant_name">La palette du gout</h2>
                 <i class="far fa-heart heart_page"></i>
         </div>
         <section class="detail_menu--entrées">
             <h3>ENTREÉS</h3>
-                <article class="menu_1__palette_du_gout">
+                <article class="menu_1">
                     <h4>Tartare de poulpe</h4>
                     <div class="description_menu">
                         <p>Aux zestes d'orange</p>
                         <p class="price">25€</p>
                     </div>
                 </article>
-                <article class="menu_2__palette_du_gout">
+                <article class="menu_2">
                     <h4>Velouté de légumes d'antan</h4>
                     <div class="description_menu">
                         <p>Carotte, panais, topinambour</p>
                         <p class="price">35€</p>
                     </div>
                 </article>       
-                <article class="menu_3__palette_du_gout">
+                <article class="menu_3">
                     <h4>Soupe à l'oignon</h4>
                     <div class="description_menu">
                         <p>Revisitée</p>
@@ -53,21 +53,21 @@
         </section>
         <section class="detail_menu--plats">
             <h3>PLATS</h3>
-            <article class="menu_1__palette_du_gout">
+            <article class="menu_4">
                 <h4>Coquilles Saint-Jacques</h4>
                 <div class="description_menu">
                     <p>Accompagné d'une purée de panais</p>
                     <p class="price">40€</p>
                 </div>
             </article>
-            <article class="menu_2__palette_du_gout">
+            <article class="menu_5">
                 <h4>Magret de canard</h4>
                 <div class="description_menu">
                     <p>Et parmentier de pommes de terre</p>
                     <p class="price">35€</p>
                 </div>
             </article>       
-            <article class="menu_3__palette_du_gout">
+            <article class="menu_6">
                 <h4>Pigeonneau d'Ile-et-Vilaine</h4>
                 <div class="description_menu">
                     <p>Sur son lit de gnocchis aux légumes</p>
@@ -77,21 +77,21 @@
         </section> 
         <section class="detail_menu--desserts">
             <h3>DESSERTS</h3>
-            <article class="menu_1__palette_du_gout">
+            <article class="menu_7">
                 <h4>Pétales de violettes gl&cés</h4>
                 <div class="description_menu">
                     <p>Et purée de noisettes</p>
                     <p class="price">18€</p>
                 </div>
             </article>
-            <article class="menu_2__palette_du_gout">
+            <article class="menu_8">
                 <h4>Fondant au chocolat</h4>
                 <div class="description_menu">
                     <p>Revisité</p>
                     <p class="price">22€</p>
                 </div>
             </article>       
-            <article class="menu_3__palette_du_gout">
+            <article class="menu_9">
                 <h4>Millefeuille croustillant</h4>
                 <div class="description_menu">
                     <p>Myrtilles de pâte d'amande</p>
