--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -20,30 +20,30 @@
     <main class="main_page">
         <span>
             <img class="illustration_page" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-            alt="photo d'une assiette du restaurant la palette du gout">
+            alt="photo d'une assiette du restaurant la note enchantée">
         </span>
         <div class="menu_page">
             <div class="ss_titre_page">
-                <h2 class="titre_la_palette_du_gout">La note enchantée</h2>
+                <h2 class="name_restaurant">La note enchantée</h2>
                 <i class="far fa-heart heart_page"></i>
         </div>
         <section class="detail_menu--entrées">
             <h3>ENTREÉS</h3>
-                <article class="menu_1__palette_du_gout">
+                <article class="menu_1">
                     <h4>Ravioles de foie gras</h4>
                     <div class="description_menu">
                         <p>Accompagnés de leur crème à la truffe</p>
                         <p class="price">25€</p>
                     </div>
                 </article>
-                <article class="menu_2__palette_du_gout">
+                <article class="menu_2">
                     <h4>Caviar osciètre </h4>
                     <div class="description_menu">
                         <p>Sur blini à la farine de blé noir</p>
                         <p class="price">35€</p>
                     </div>
                 </article>       
-                <article class="menu_3__palette_du_gout">
+                <article class="menu_3">
                     <h4>Homard et espuma de potiron</h4>
                     <div class="description_menu">
                         <p>Mariné aux zestes d'orange</p>
@@ -53,21 +53,21 @@
         </section>
         <section class="detail_menu--plats">
             <h3>PLATS</h3>
-            <article class="menu_1__palette_du_gout">
+            <article class="menu_4">
                 <h4>Noix de coquilles Saint-Jacques</h4>
                 <div class="description_menu">
                     <p>Sur lit de purée de céleri-rave</p>
                     <p class="price">40€</p>
                 </div>
             </article>
-            <article class="menu_2__palette_du_gout">
+            <article class="menu_5">
                 <h4>Langoustine poêlée</h4>
                 <div class="description_menu">
                     <p>Purée de patate douce</p>
                     <p class="price">35€</p>
                 </div>
             </article>       
-            <article class="menu_3__palette_du_gout">
+            <article class="menu_6">
                 <h4>Mijoté de queue de boeuf</h4>
                 <div class="description_menu">
                     <p>Et riz sauvage aux zestes de citron</p>
@@ -77,21 +77,21 @@
         </section> 
         <section class="detail_menu--desserts">
             <h3>DESSERTS</h3>
-            <article class="menu_1__palette_du_gout">
+            <article class="menu_7">
                 <h4>Macaron noisette et chocolat</h4>
                 <div class="description_menu">
                     <p>Glace au caramel brun et sel de Guérande</p>
                     <p class="price">18€</p>
                 </div>
             </article>
-            <article class="menu_2__palette_du_gout">
+            <article class="menu_8">
                 <h4>Baba au rhum revisité</h4>
                 <div class="description_menu">
                     <p>Avec son coulis de citron</p>
                     <p class="price">22€</p>
                 </div>
             </article>       
-            <article class="menu_3__palette_du_gout">
+            <article class="menu_9">
                 <h4>Tarte au citron meringuée</h4>
                 <div class="description_menu">
                     <p>Déstructurée</p>
