--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -24,26 +24,26 @@
         </span>
         <div class="menu_page">
             <div class="ss_titre_page">
-                <h2 class="titre_la_palette_du_gout">La palette du gout</h2>
+                <h2 class="restaurant_name">La palette du gout</h2>
                 <i class="far fa-heart heart_page"></i>
         </div>
         <section class="detail_menu--entrées">
             <h3>ENTREÉS</h3>
-                <article class="menu_1__palette_du_gout">
+                <article class="menu_1">
                     <h4>Fricassée d'escargot</h4>
                     <div class="description_menu">
                         <p>Au piment d'espelette</p>
                         <p class="price">25€</p>
                     </div>
                 </article>
-                <article class="menu_2__palette_du_gout">
+                <article class="menu_2">
                     <h4>Foie gras de canard mi-cuit</h4>
                     <div class="description_menu">
                         <p>Et ses copeaux de truffe noire</p>
                         <p class="price">35€</p>
                     </div>
                 </article>       
-                <article class="menu_3__palette_du_gout">
+                <article class="menu_3">
                     <h4>Oeuf au plat</h4>
                     <div class="description_menu">
                         <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -53,21 +53,21 @@
         </section>
         <section class="detail_menu--plats">
             <h3>PLATS</h3>
-            <article class="menu_1__palette_du_gout">
+            <article class="menu_4">
                 <h4>Filet de boeuf aux herbes</h4>
                 <div class="description_menu">
                     <p>Accompagné de sa ribambelle de légume</p>
                     <p class="price">40€</p>
                 </div>
             </article>
-            <article class="menu_2__palette_du_gout">
+            <article class="menu_5">
                 <h4>Parmentier de queue de boeuf</h4>
                 <div class="description_menu">
                     <p>À la truffe noire sur sa purée de panais</p>
                     <p class="price">35€</p>
                 </div>
             </article>       
-            <article class="menu_3__palette_du_gout">
+            <article class="menu_6">
                 <h4>Filet de Turbot</h4>
                 <div class="description_menu">
                     <p>Aux agrumes</p>
@@ -77,21 +77,21 @@
         </section> 
         <section class="detail_menu--desserts">
             <h3>DESSERTS</h3>
-            <article class="menu_1__palette_du_gout">
+            <article class="menu_7">
                 <h4>Paris-Brest</h4>
                 <div class="description_menu">
                     <p>Revisité</p>
                     <p class="price">18€</p>
                 </div>
             </article>
-            <article class="menu_2__palette_du_gout">
+            <article class="menu_8">
                 <h4>Macaron au chocolat d'exception</h4>
                 <div class="description_menu">
                     <p>Et glace à la vanille de Madagascar</p>
                     <p class="price">22€</p>
                 </div>
             </article>       
-            <article class="menu_3__palette_du_gout">
+            <article class="menu_9">
                 <h4>Mousse au chocolat</h4>
                 <div class="description_menu">
                     <p>Au piment d'espelette et à la truffe noire</p>
