--- a/ledelicesdessens.html
+++ b/ledelicesdessens.html
@@ -20,30 +20,30 @@
     <main class="main_page">
         <span>
             <img class="illustration_page" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-            alt="photo d'une assiette du restaurant la palette du gout">
+            alt="photo d'une assiette du restaurant le delice des sens">
         </span>
         <div class="menu_page">
             <div class="ss_titre_page">
-                <h2 class="titre_la_palette_du_gout">Le délice des sens</h2>
+                <h2 class="name_restaurant">Le délice des sens</h2>
                 <i class="far fa-heart heart_page"></i>
         </div>
         <section class="detail_menu--entrées">
             <h3>ENTREÉS</h3>
-                <article class="menu_1__palette_du_gout">
+                <article class="menu_1">
                     <h4>Tartare de thon</h4>
                     <div class="description_menu">
                         <p>Assaisonné au yuzu</p>
                         <p class="price">25€</p>
                     </div>
                 </article>
-                <article class="menu_2__palette_du_gout">
+                <article class="menu_2">
                     <h4>Bouchée de homard croustillant</h4>
                     <div class="description_menu">
                         <p>Et sa farandole de petits légumes</p>
                         <p class="price">35€</p>
                     </div>
                 </article>       
-                <article class="menu_3__palette_du_gout">
+                <article class="menu_3">
                     <h4>Velouté de cèpes</h4>
                     <div class="description_menu">
                         <p>Aux truffes</p>
@@ -53,21 +53,21 @@
         </section>
         <section class="detail_menu--plats">
             <h3>PLATS</h3>
-            <article class="menu_1__palette_du_gout">
+            <article class="menu_4">
                 <h4>Poulet rôti aux herbes de Provence</h4>
                 <div class="description_menu">
                     <p>Et sa crème de truffe</p>
                     <p class="price">40€</p>
                 </div>
             </article>
-            <article class="menu_2__palette_du_gout">
+            <article class="menu_5">
                 <h4>Langouste rôtie</h4>
                 <div class="description_menu">
                     <p>Et ses légumes de saison</p>
                     <p class="price">35€</p>
                 </div>
             </article>       
-            <article class="menu_3__palette_du_gout">
+            <article class="menu_6">
                 <h4>Côte de boeuf Angus</h4>
                 <div class="description_menu">
                     <p>Et sa purée de panais</p>
@@ -77,21 +77,21 @@
         </section> 
         <section class="detail_menu--desserts">
             <h3>DESSERTS</h3>
-            <article class="menu_1__palette_du_gout">
+            <article class="menu_7">
                 <h4>Farandole de desserts</h4>
                 <div class="description_menu">
                     <p>Du chef</p>
                     <p class="price">18€</p>
                 </div>
             </article>
-            <article class="menu_2__palette_du_gout">
+            <article class="menu_8">
                 <h4>Crème brulée</h4>
                 <div class="description_menu">
                     <p>Revisitée</p>
                     <p class="price">22€</p>
                 </div>
             </article>       
-            <article class="menu_3__palette_du_gout">
+            <article class="menu_9">
                 <h4>Tiramisu</h4>
                 <div class="description_menu">
                     <p>À la noisette</p>
