--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -27,6 +27,8 @@
                 <h2 class="restaurant_name">La palette du gout</h2>
                 <i class="far fa-heart heart_page"></i>
         </div>
+        
+    <div class="orga_desktop__menu">
         <section class="detail_menu--entrées">
             <h3>ENTREÉS</h3>
                 <article class="menu_1">
@@ -75,34 +77,36 @@
                 </div> 
             </article> 
         </section> 
-        <section class="detail_menu--desserts">
-            <h3>DESSERTS</h3>
-            <article class="menu_7">
-                <h4>Pétales de violettes gl&cés</h4>
-                <div class="description_menu">
-                    <p>Et purée de noisettes</p>
-                    <p class="price">18€</p>
-                </div>
-            </article>
-            <article class="menu_8">
-                <h4>Fondant au chocolat</h4>
-                <div class="description_menu">
-                    <p>Revisité</p>
-                    <p class="price">22€</p>
-                </div>
-            </article>       
-            <article class="menu_9">
-                <h4>Millefeuille croustillant</h4>
-                <div class="description_menu">
-                    <p>Myrtilles de pâte d'amande</p>
-                    <p class="price">23€</p>
-                </div> 
-            </article> 
-        </section>
-        <div class="button--commande">
-            <input class="commander" type="button" value="Commander">
-        </div>
-        </div>
+    </div>
+        <div class="orga_desktop_dessert-button">
+            <section class="detail_menu--desserts">
+                <h3>DESSERTS</h3>
+                <article class="menu_7">
+                    <h4>Pétales de violettes glacés</h4>
+                    <div class="description_menu">
+                        <p>Et purée de noisettes</p>
+                        <p class="price">18€</p>
+                    </div>
+                </article>
+                <article class="menu_8">
+                    <h4>Fondant au chocolat</h4>
+                    <div class="description_menu">
+                        <p>Revisité</p>
+                        <p class="price">22€</p>
+                    </div>
+                </article>       
+                <article class="menu_9">
+                    <h4>Millefeuille croustillant</h4>
+                    <div class="description_menu">
+                        <p>Myrtilles de pâte d'amande</p>
+                        <p class="price">23€</p>
+                    </div> 
+                </article> 
+            </section>
+            <div class="button--commande">
+                <input class="commander" type="button" value="Commander">
+            </div>
+        </div>     
     </main>
     <footer>
         <h4>ohmyfood</h4>
