--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -27,7 +27,8 @@
                 <h2 class="restaurant_name">La palette du gout</h2>
                 <i class="far fa-heart heart_page"></i>
         </div>
-        <section class="detail_menu--entrées">
+        <div class="orga_desktop__menu">
+            <section class="detail_menu--entrées">
             <h3>ENTREÉS</h3>
                 <article class="menu_1">
                     <h4>Fricassée d'escargot</h4>
@@ -75,7 +76,9 @@
                 </div> 
             </article> 
         </section> 
-        <section class="detail_menu--desserts">
+        </div>
+        <div class="orga_desktop_dessert-button">
+            <section class="detail_menu--desserts">
             <h3>DESSERTS</h3>
             <article class="menu_7">
                 <h4>Paris-Brest</h4>
@@ -98,10 +101,10 @@
                     <p class="price">23€</p>
                 </div> 
             </article> 
-        </section>
-        <div class="button--commande">
-            <input class="commander" type="button" value="Commander">
-        </div>
+            </section>
+            <div class="button--commande">
+                <input class="commander" type="button" value="Commander">
+            </div>
         </div>
     </main>
     <footer>
