--- a/ledelicesdessens.html
+++ b/ledelicesdessens.html
@@ -27,7 +27,8 @@
                 <h2 class="restaurant_name">Le délice des sens</h2>
                 <i class="far fa-heart heart_page"></i>
             </div>
-            <section class="detail_menu--entrées">
+            <div class="orga_desktop__menu">
+                <section class="detail_menu--entrées">
                 <h3>ENTREÉS</h3>
                 <article class="menu_1">
                     <h4>Tartare de thon</h4>
@@ -75,7 +76,9 @@
                     </div>
                 </article>
             </section>
-            <section class="detail_menu--desserts">
+            </div>
+            <div class="orga_desktop_dessert-button">
+                <section class="detail_menu--desserts">
                 <h3>DESSERTS</h3>
                 <article class="menu_7">
                     <h4>Farandole de desserts</h4>
