--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -10,109 +10,113 @@
     <title>Oh My Food</title>
 </head>
 
-<body>
-    <header class="header_page">
-        <div class="page_accueil">
-            <a href="index.html"><i class="fas fa-arrow-left back"></i></a>
-            <h1>Ohmyfood</h1>
-        </div>
-    </header>
-    <main class="main_page">
-        <span>
-            <img class="illustration_page" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="photo d'une assiette du restaurant la note enchantée">
-        </span>
-        <div class="menu_page">
-            <div class="ss_titre_page">
-                <h2 class="restaurant_name">La note enchantée</h2>
-                <i class="far fa-heart heart_page"></i>
+    <body>
+        <header class="header_page">
+            <div class="page_accueil">
+                <a href="index.html"><i class="fas fa-arrow-left back"></i></a>
+                <h1>Ohmyfood</h1>
             </div>
-            <section class="detail_menu--entrées">
-                <h3>ENTREÉS</h3>
-                <article class="menu_1">
-                    <h4>Ravioles de foie gras</h4>
-                    <div class="description_menu">
-                        <p>Accompagnés de leur crème à la truffe</p>
-                        <p class="price">25€</p>
-                    </div>
-                </article>
-                <article class="menu_2">
-                    <h4>Caviar osciètre </h4>
-                    <div class="description_menu">
-                        <p>Sur blini à la farine de blé noir</p>
-                        <p class="price">35€</p>
-                    </div>
-                </article>
-                <article class="menu_3">
-                    <h4>Homard et espuma de potiron</h4>
-                    <div class="description_menu">
-                        <p>Mariné aux zestes d'orange</p>
-                        <p class="price">20€</p>
-                    </div>
-                </article>
-            </section>
-            <section class="detail_menu--plats">
-                <h3>PLATS</h3>
-                <article class="menu_4">
-                    <h4>Noix de coquilles Saint-Jacques</h4>
-                    <div class="description_menu">
-                        <p>Sur lit de purée de céleri-rave</p>
-                        <p class="price">40€</p>
-                    </div>
-                </article>
-                <article class="menu_5">
-                    <h4>Langoustine poêlée</h4>
-                    <div class="description_menu">
-                        <p>Purée de patate douce</p>
-                        <p class="price">35€</p>
-                    </div>
-                </article>
-                <article class="menu_6">
-                    <h4>Mijoté de queue de boeuf</h4>
-                    <div class="description_menu">
-                        <p>Et riz sauvage aux zestes de citron</p>
-                        <p class="price">44€</p>
-                    </div>
-                </article>
-            </section>
-            <section class="detail_menu--desserts">
-                <h3>DESSERTS</h3>
-                <article class="menu_7">
-                    <h4>Macaron noisette et chocolat</h4>
-                    <div class="description_menu">
-                        <p>Glace au caramel brun et sel de Guérande</p>
-                        <p class="price">18€</p>
-                    </div>
-                </article>
-                <article class="menu_8">
-                    <h4>Baba au rhum revisité</h4>
-                    <div class="description_menu">
-                        <p>Avec son coulis de citron</p>
-                        <p class="price">22€</p>
-                    </div>
-                </article>
-                <article class="menu_9">
-                    <h4>Tarte au citron meringuée</h4>
-                    <div class="description_menu">
-                        <p>Déstructurée</p>
-                        <p class="price">23€</p>
-                    </div>
-                </article>
-            </section>
-            <div class="button--commande">
-                <input class="commander" type="button" value="Commander">
+        </header>
+        <main class="main_page">
+            <span>
+                <img class="illustration_page" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                    alt="photo d'une assiette du restaurant la note enchantée">
+            </span>
+            <div class="menu_page">
+                <div class="ss_titre_page">
+                    <h2 class="restaurant_name">La note enchantée</h2>
+                    <i class="far fa-heart heart_page"></i>
+                </div>
+                <div class="orga_desktop__menu">
+                    <section class="detail_menu--entrées">
+                    <h3>ENTREÉS</h3>
+                    <article class="menu_1">
+                        <h4>Ravioles de foie gras</h4>
+                        <div class="description_menu">
+                            <p>Accompagnés de leur crème à la truffe</p>
+                            <p class="price">25€</p>
+                        </div>
+                    </article>
+                    <article class="menu_2">
+                        <h4>Caviar osciètre </h4>
+                        <div class="description_menu">
+                            <p>Sur blini à la farine de blé noir</p>
+                            <p class="price">35€</p>
+                        </div>
+                    </article>
+                    <article class="menu_3">
+                        <h4>Homard et espuma de potiron</h4>
+                        <div class="description_menu">
+                            <p>Mariné aux zestes d'orange</p>
+                            <p class="price">20€</p>
+                        </div>
+                    </article>
+                </section>
+                <section class="detail_menu--plats">
+                    <h3>PLATS</h3>
+                    <article class="menu_4">
+                        <h4>Noix de coquilles Saint-Jacques</h4>
+                        <div class="description_menu">
+                            <p>Sur lit de purée de céleri-rave</p>
+                            <p class="price">40€</p>
+                        </div>
+                    </article>
+                    <article class="menu_5">
+                        <h4>Langoustine poêlée</h4>
+                        <div class="description_menu">
+                            <p>Purée de patate douce</p>
+                            <p class="price">35€</p>
+                        </div>
+                    </article>
+                    <article class="menu_6">
+                        <h4>Mijoté de queue de boeuf</h4>
+                        <div class="description_menu">
+                            <p>Et riz sauvage aux zestes de citron</p>
+                            <p class="price">44€</p>
+                        </div>
+                    </article>
+                </section>
+                </div>
+                <div class="orga_desktop_dessert-button">
+                    <section class="detail_menu--desserts">
+                    <h3>DESSERTS</h3>
+                    <article class="menu_7">
+                        <h4>Macaron noisette et chocolat</h4>
+                        <div class="description_menu">
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                            <p class="price">18€</p>
+                        </div>
+                    </article>
+                    <article class="menu_8">
+                        <h4>Baba au rhum revisité</h4>
+                        <div class="description_menu">
+                            <p>Avec son coulis de citron</p>
+                            <p class="price">22€</p>
+                        </div>
+                    </article>
+                    <article class="menu_9">
+                        <h4>Tarte au citron meringuée</h4>
+                        <div class="description_menu">
+                            <p>Déstructurée</p>
+                            <p class="price">23€</p>
+                        </div>
+                    </article>
+                </section>
+                <div class="button--commande">
+                    <input class="commander" type="button" value="Commander">
+                </div>
             </div>
-        </div>
-    </main>
-    <footer>
-        <h4>ohmyfood</h4>
-        <div class="footer_list">
-            <p><i class="fas fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un restaurant</a>
-            </p>
-            <p><i class="fas fa-handshake"></i><a class="a__element--modif2" href="#">Devenir
-                    partenaire</a></p>
-            <a class="a__element" href="#">Mention légales</a>
-            <a class="a__element" href="mailto:someone@yoursite.com">Contact</a>
-        </div>
-    </footer>
-</body>
+        </main>
+        <footer>
+            <h4>ohmyfood</h4>
+            <div class="footer_list">
+                <p><i class="fas fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un restaurant</a>
+                </p>
+                <p><i class="fas fa-handshake"></i><a class="a__element--modif2" href="#">Devenir
+                        partenaire</a></p>
+                <a class="a__element" href="#">Mention légales</a>
+                <a class="a__element" href="mailto:someone@yoursite.com">Contact</a>
+            </div>
+        </footer>
+    </body>
+</html>
