--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+    <div id="loading_spinner">
+        <div id="icones_spinner">
+            <i class="fas fa-utensils fa-spin -alt icone "></i>
+            <i class="fas fa-utensils fa-spin -alt icone "></i>
+            <i class="fas fa-utensils fa-spin -alt icone "></i>
+        </div>
+    </div>
     <header>
         <h1>Ohmyfood</h1>
     </header>
@@ -111,6 +118,7 @@
 
         </footer>
 
+    </div>
     </div>
 </body>
 
