--- a/ledelicesdessens.html
+++ b/ledelicesdessens.html
@@ -135,12 +135,12 @@
         </div>     
     </main>
     <footer>
-        <h4>ohmyfood</h4>
+        <h4 class="footer_h4">ohmyfood</h4>
         <div class="footer_list">
-            <p><i class="fas fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un restaurant</a>
-            </p>
-            <p><i class="fas fa-handshake"></i><a class="a__element--modif2" href="#">Devenir
-                    partenaire</a></p>
+            <span class="p_footer"><i class="fas fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un restaurant</a>
+            </span>
+            <span class="p_footer"><i class="fas fa-handshake"></i><a class="a__element--modif2" href="#">Devenir
+                    partenaire</a></span>
             <a class="a__element" href="#">Mention légales</a>
             <a class="a__element" href="mailto:someone@yoursite.com">Contact</a>
         </div>
