modif ellipsis etc

--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -32,8 +32,8 @@
             <h3>ENTREÉS</h3>
                 <article class="menu_1">          
                     <div class="description_menu">
-                        <h4>Raviole de foie gras</h4>
-                        <p>Accaompagnés de leur crème à la truffe</p>
+                        <h4 class="title_menu_h4">Raviole de foie gras</h4>
+                        <p class="sous_menu">Accaompagnés de leur crème à la truffe</p>
                     </div>
                         <p class="price">25€</p>   
                     <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
@@ -41,24 +41,24 @@
                 <article class="menu_2">
                     
                     <div class="description_menu">
-                        <h4>Caviar osciètre</h4>
-                        <p>Sur blini à la truffe</p>
+                        <h4 class="title_menu_h4">Caviar osciètre</h4>
+                        <p class="sous_menu">Sur blini à la truffe</p>
                     </div>
                         <p class="price">35€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>   
                 </article>       
                 <article class="menu_3">
                     <div class="description_menu">
-                        <h4>Homard et espuma de potiron</h4>
-                        <p>Mariné aux zeste d'orange</p>
+                        <h4 class="title_menu_h4">Homard et espuma de potiron</h4>
+                        <p class="sous_menu">Mariné aux zeste d'orange</p>
                     </div>
                         <p class="price">20€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div> 
                 </article>
                 <article class="menu_4">
                     <div class="description_menu">
-                        <h4>Foie gras de canard cuit entier</h4>
-                        <p>Confiture de figue et pain toasté</p>
+                        <h4 class="title_menu_h4">Foie gras de canard cuit entier</h4>
+                        <p class="sous_menu">Confiture de figue et pain toasté</p>
                     </div>
                         <p class="price">40€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
@@ -68,24 +68,24 @@
             <h3>PLATS</h3>
             <article class="menu_4">
                 <div class="description_menu">
-                    <h4>Noix de coquilles Saint-Jacques</h4>
-                    <p>Sur lit de purée de céleri-rave</p>
+                    <h4 class="title_menu_h4">Noix de coquilles Saint-Jacques</h4>
+                    <p class="sous_menu">Sur lit de purée de céleri-rave</p>
                 </div>
                     <p class="price">40€</p>
                     <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
             </article>
             <article class="menu_5">
                 <div class="description_menu">
-                    <h4>Langoustine poêlée</h4>
-                    <p>Purée de patate douce</p>
+                    <h4 class="title_menu_h4">Langoustine poêlée</h4>
+                    <p class="sous_menu">Purée de patate douce</p>
                 </div>
                     <p class="price">35€</p>
                     <div class="check_menu"><i class="fas fa-check-circle check"></i></div>  
             </article>       
             <article class="menu_6">            
                 <div class="description_menu">
-                    <h4>Mijotée de queue de boeuf</h4>
-                    <p>Et riz sauvage aux zestes de citron</p>
+                    <h4 class="title_menu_h4">Mijotée de queue de boeuf</h4>
+                    <p class="sous_menu">Et riz sauvage aux zestes de citron</p>
                 </div> 
                     <p class="price">44€</p>
                     <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
@@ -97,24 +97,24 @@
                 <h3>DESSERTS</h3>
                 <article class="menu_7"> 
                     <div class="description_menu">
-                        <h4>Macaron noisette et chocolat</h4>
-                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <h4 class="title_menu_h4">Macaron noisette et chocolat</h4>
+                        <p class="sous_menu">Glace au caramel brun et sel de Guérande</p>
                     </div>
                         <p class="price">18€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
                 </article>
                 <article class="menu_8">                 
                     <div class="description_menu">
-                        <h4>Baba au rhum revisité</h4>
-                        <p>Avec son coulis de citron</p>
+                        <h4 class="title_menu_h4">Baba au rhum revisité</h4>
+                        <p class="sous_menu">Avec son coulis de citron</p>
                     </div>
                         <p class="price">22€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
                 </article>       
                 <article class="menu_9">       
                     <div class="description_menu">
-                        <h4>Tarte au citron meringuée</h4>
-                        <p>Déstructurée</p>
+                        <h4 class="title_menu_h4">Tarte au citron meringuée</h4>
+                        <p class="sous_menu">Déstructurée</p>
                     </div> 
                         <p class="price">23€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>     
