--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -26,6 +26,7 @@
             <div class="ss_titre_page">
                 <h2 class="restaurant_name">La note enchantée</h2>
                 <i class="far fa-heart heart_page"></i>
+                <i class="fas fa-heart heartfull_page"></i> 
             </div> 
     <div class="orga_desktop__menu">
         <section class="detail_menu--entrées">
